# tneb-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  app.ts  docker-compose.yaml  extract-capcha.ts  mailer.py  main.py  package.json  pyproject.toml  sample-mapping.json  sample.env  scraper.py  tneb-mailer.ts  tneb-scraper.ts  tsconfig.json  utils.py
.github/workflows/: publish-ghcr.yml  schedule-scraper.yml
