[tool.poetry]
name = "tneb-scraper-python"
version = "0.1.0"
description = "Scrapes TNEB website with Python Selenium"
authors = ["Naresh Jagadeesan <consultingkael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
pytesseract = "^0.3.10"
pandas = "^2.1.4"
lxml = "^4.9.3"
numpy = "^1.26.2"
poetry-plugin-dotenv = "^0.5.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
jupyterlab = "^4.0.9"
jupyterlab-vim = "^4.1.0"
jupyter-resource-usage = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
